Project

General

Profile

Actions

Bug #23203

closed

multisite: segfault in radosgw-admin realm pull

Added by Casey Bodley about 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel, luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The http client in radosgw-admin is trying to use RGWCurlHandles without doing the global init.

ceph version 13.0.1-2419-g8e8c5e2 (8e8c5e2a3849c90f4f16892e1150d22de8f4de34) mimic (dev)
1: (()+0x4c25b0) [0x557a9b9155b0]
2: (()+0xf5e0) [0x7f4a6de6c5e0]
3: (Mutex::Lock(bool)+0x21) [0x7f4a65482951]
4: (RGWCurlHandles::get_curl_handle()+0x15) [0x557a9b61b515]
5: (RGWHTTPClient::process(char const*, char const*)+0x15d) [0x557a9b61da7d]
6: (RGWRESTSimpleRequest::forward_request(RGWAccessKey&, req_info&, unsigned long, ceph::buffer::list*, ceph::buffer::list*)+0x40f) [0x557a9b78a2ef]
7: (()+0x14fa92) [0x557a9b5a2a92]
8: (main()+0xc694) [0x557a9b578d24]
9: (__libc_start_main()+0xf5) [0x7f4a635b3c05]
10: (()+0x14d2a0) [0x557a9b5a02a0]

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #23244: jewel: multisite: segfault in radosgw-admin realm pullResolvedAbhishek LekshmananActions
Copied to rgw - Backport #23245: luminous: multisite: segfault in radosgw-admin realm pullResolvedAbhishek LekshmananActions
Actions #2

Updated by Jos Collin about 6 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Nathan Cutler about 6 years ago

  • Assignee set to Abhishek Lekshmanan
  • Backport set to jewel, luminous
Actions #5

Updated by Abhishek Lekshmanan about 6 years ago

  • Copied to Backport #23244: jewel: multisite: segfault in radosgw-admin realm pull added
Actions #6

Updated by Abhishek Lekshmanan about 6 years ago

  • Copied to Backport #23245: luminous: multisite: segfault in radosgw-admin realm pull added
Actions #7

Updated by Yehuda Sadeh about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #10

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF