rgw: initialize curl handle cache in rgw_admin

Fixes: http://tracker.ceph.com/issues/23203

Signed-off-by: Casey Bodley <cbodley@redhat.com>